# Bayesian-Agent

./: .env_template  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  index.html  mkdocs.yml  pyproject.toml  run.sh  sitemap.xml
.github/workflows/: docs.yml
adapters/: index.html
architecture/: index.html
articles/bayesian-evidence-acquired-learning/: index.html
articles/complex-bayesian-rewrite-example/: index.html
articles/why-bayesian-for-skill-evolution/: index.html
articles/zhihu-bayesian-agent/: index.html
artifacts/: README.md
artifacts/bayesian_full/: results.json  table.md
artifacts/bayesian_incremental/: results.json  table.md
bayesian_agent/: __init__.py  cli.py
citation/: index.html
cli/: index.html
core-concepts/: index.html
docs/: adapters.md  architecture.md  citation.md  cli.md  core-concepts.md  experiments.md  index.md  method.md  native-harness.md  openclaw-integration-roadmap.md  python-api.md  quick-start.md  roadmap.md  schemas.md
experiments/: index.html  run_benchmarks.py  run_sop_lifelong.py
method/: index.html
native-harness/: index.html
python-api/: index.html
quick-start/: index.html
roadmap/: index.html
schemas/: index.html  skill_belief.schema.json  trajectory.schema.json
search/: search_index.json
tests/: test_adapters.py  test_benchmark_evolution.py  test_categorical_bayes.py  test_core.py  test_experiment_scripts.py  test_harness_core.py  test_memory_layers.py  test_native_harness.py  test_registry_context.py  test_repair_cli.py  test_workflow_log_and_standards.py
(+55 files in other folders)
